--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -11,6 +11,8 @@ jobs:
   run-bench-suite:
     name: Run benchmark suite
     uses: ./.github/workflows/bench-suite.yml
+    with:
+      self-hosted-runner: true
 
   upload-to-bencher:
     name: Upload results to Bencher
@@ -44,7 +46,7 @@ jobs:
         env:
           BENCHER_PROJECT: bevy
           BENCHER_API_TOKEN: ${{ secrets.BENCHER_API_TOKEN }}
-          BENCHER_TESTBED: github-actions
+          BENCHER_TESTBED: grapefruit
         run: |
           bencher run \
             --adapter rust_criterion \
